btcPriceWidget Version 0.3 - Modification sous forme de bandeau du widget

--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
 <body>
     <div id="mainCryptoBox">
     <div class="boxCrypto">
-        <p class="cryptoText">BITCOIN / USD (15m)</p>
-        <span class="cryptoSpan" id="usd"></span>
+        <p class="cryptoText"><span class="btc">BITCOIN</span></p>
+    </div>
+    <div class="boxCrypto">
+        <p class="cryptoText">USD <span class="cryptoSpan" id="usd"></span></p>
     </div>  
     <div class="boxCrypto">
-        <p class="cryptoText">BITCOIN / EUR (15m)</p>
-        <span class="cryptoSpan" id="eur"></span>
+        <p class="cryptoText">EUR <span class="cryptoSpan" id="eur"></span></p>
     </div>
     <div class="boxCrypto">  
-        <p class="cryptoText">BITCOIN / CHF (15m)</p>
-        <span class="cryptoSpan" id="chf"></span>
+        <p class="cryptoText">CHF <span class="cryptoSpan" id="chf"></span></p>
     </div>
+    <!-- <p class="cryptoText2">Moyenne sur 15 minutes</p> !-->
     </div>
     <script src="script.js"></script>
 </body>
