--- a/index.html
+++ b/index.html
@@ -6,21 +6,26 @@
     <title>btcPriceWidget</title>
 </head>
 <body>
+
+    <!-- Widget HTML code -->
+
     <div id="mainCryptoBox">
-    <div class="boxCrypto">
-        <p class="cryptoText"><span class="btc">BITCOIN</span></p>
+        <div class="boxCrypto">
+            <p class="cryptoText"><span class="btc">BITCOIN</span></p>
+        </div>
+        <div class="boxCrypto">
+            <p class="cryptoText">USD <span class="cryptoSpan" id="usd"></span></p>
+        </div>  
+        <div class="boxCrypto">
+            <p class="cryptoText">EUR <span class="cryptoSpan" id="eur"></span></p>
+        </div>
+        <div class="boxCrypto">  
+            <p class="cryptoText">CHF <span class="cryptoSpan" id="chf"></span></p>
+        </div>
     </div>
-    <div class="boxCrypto">
-        <p class="cryptoText">USD <span class="cryptoSpan" id="usd"></span></p>
-    </div>  
-    <div class="boxCrypto">
-        <p class="cryptoText">EUR <span class="cryptoSpan" id="eur"></span></p>
-    </div>
-    <div class="boxCrypto">  
-        <p class="cryptoText">CHF <span class="cryptoSpan" id="chf"></span></p>
-    </div>
-    <!-- <p class="cryptoText2">Moyenne sur 15 minutes</p> !-->
-    </div>
+
+    <!-- Widget HTML code -->
+
     <script src="script.js"></script>
 </body>
 </html>
